[gd_scene load_steps=18 format=2]

[ext_resource path="res://Battle.gd" type="Script" id=1]
[ext_resource path="res://Rat.tscn" type="PackedScene" id=2]
[ext_resource path="res://Slime.tscn" type="PackedScene" id=3]
[ext_resource path="res://DIO.tscn" type="PackedScene" id=4]
[ext_resource path="res://MobileRPG Resources/Sounds/Decisive Battle.wav" type="AudioStream" id=5]
[ext_resource path="res://MobileRPG Resources/Sounds/JJBA - Dark Rebirth (Theme of DIO).wav" type="AudioStream" id=6]
[ext_resource path="res://MobileRPG Resources/Sounds/KONO DIO DA.wav" type="AudioStream" id=7]
[ext_resource path="res://PlayerStats.gd" type="Script" id=8]
[ext_resource path="res://MobileRPG Resources/Images/Dungeon.png" type="Texture" id=9]
[ext_resource path="res://MobileRPG Resources/Images/Mobile RPG Mockup.png" type="Texture" id=10]
[ext_resource path="res://DefaultTheme.tres" type="Theme" id=11]
[ext_resource path="res://StatsPanel.gd" type="Script" id=12]
[ext_resource path="res://SwordActionButton.tscn" type="PackedScene" id=13]
[ext_resource path="res://HealActionButton.tscn" type="PackedScene" id=14]

[sub_resource type="StyleBoxEmpty" id=1]

[sub_resource type="Animation" id=2]
length = 0.5
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("Fade:modulate")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.35, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="Animation" id=3]
length = 2.5
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("HealRect:color")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 2.1, 2.5 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 0.290196, 0.647059, 0.188235, 0 ), Color( 0.290196, 0.647059, 0.188235, 0.352941 ), Color( 0.290196, 0.647059, 0.188235, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("UI/TextboxPanel/TextContent:visible_characters")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.05, 0.1, 0.15, 0.2, 0.25, 0.3, 0.35, 0.4, 0.45, 0.5, 0.55, 0.6, 0.65, 0.7, 0.75, 0.8, 0.85, 0.9, 0.95, 1, 1.05, 1.1, 1.15, 1.2, 1.25, 1.3, 1.35, 1.4, 1.45, 1.5, 1.55, 1.6, 1.65, 1.7, 1.75, 1.8, 2.1, 2.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 20, 21, 22, 0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, -1, -1 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("UI/TextboxPanel/TextContent:text")
tracks/2/interp = 2
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.05, 0.1, 1.15, 1.2, 1.8, 2.1, 2.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ "", "", "Spara la Magia
bel mirale!", "Spara la Magia
bel mirale!", "Vento Taglio!", "Vento Taglio!", "", "" ]
}

[node name="Battle" type="Node"]
script = ExtResource( 1 )
enemies = [ ExtResource( 2 ), ExtResource( 3 ), ExtResource( 4 ) ]

[node name="BGMs" type="Node" parent="."]
editor/display_folded = true

[node name="ReguarBGM" type="AudioStreamPlayer" parent="BGMs"]
stream = ExtResource( 5 )
volume_db = -5.0

[node name="BossBGM" type="AudioStreamPlayer" parent="BGMs"]
stream = ExtResource( 6 )
volume_db = -5.0

[node name="DIOEntrance" type="AudioStreamPlayer" parent="BGMs"]
stream = ExtResource( 7 )

[node name="PlayerStats" type="Node" parent="."]
script = ExtResource( 8 )

[node name="Dungeon" type="Sprite" parent="."]
position = Vector2( 45, 80 )
texture = ExtResource( 9 )

[node name="EnemyPosition" type="Position2D" parent="."]
editor/display_folded = true
position = Vector2( 46, 31 )

[node name="Slime" parent="EnemyPosition" instance=ExtResource( 3 )]

[node name="Mobile RPG Mockup" type="Sprite" parent="."]
visible = false
modulate = Color( 1, 1, 1, 0.294118 )
position = Vector2( 45, 80 )
texture = ExtResource( 10 )
__meta__ = {
"_edit_lock_": true
}

[node name="UI" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
theme = ExtResource( 11 )

[node name="CenterContainer" type="CenterContainer" parent="UI"]
editor/display_folded = true
margin_right = 90.0
margin_bottom = 47.0
mouse_filter = 2

[node name="NextRoomButton" type="Button" parent="UI/CenterContainer"]
visible = false
margin_left = 10.0
margin_top = 17.0
margin_right = 80.0
margin_bottom = 30.0
rect_min_size = Vector2( 70, 13 )
text = "ENTER NEXT ROOM"

[node name="StatsPanel" type="Panel" parent="UI"]
editor/display_folded = true
margin_left = 3.0
margin_top = 47.0
margin_right = 87.0
margin_bottom = 70.0
script = ExtResource( 12 )

[node name="StatsContainer" type="HBoxContainer" parent="UI/StatsPanel"]
editor/display_folded = true
anchor_right = 1.0
anchor_bottom = 1.0

[node name="HP" type="Label" parent="UI/StatsPanel/StatsContainer"]
margin_top = 2.0
margin_right = 25.0
margin_bottom = 21.0
size_flags_horizontal = 3
text = "HP
25"
align = 1

[node name="AP" type="Label" parent="UI/StatsPanel/StatsContainer"]
margin_left = 29.0
margin_top = 2.0
margin_right = 54.0
margin_bottom = 21.0
size_flags_horizontal = 3
text = "AP
3"
align = 1

[node name="MP" type="Label" parent="UI/StatsPanel/StatsContainer"]
margin_left = 58.0
margin_top = 2.0
margin_right = 84.0
margin_bottom = 21.0
size_flags_horizontal = 3
text = "MP
10"
align = 1

[node name="TextboxPanel" type="Panel" parent="UI"]
margin_left = -2.0
margin_top = 137.0
margin_right = 92.0
margin_bottom = 161.0
mouse_filter = 2

[node name="TextContent" type="Label" parent="UI/TextboxPanel"]
anchor_right = 1.0
anchor_bottom = 1.0
align = 1
clip_text = true
percent_visible = 0.0

[node name="Textbox" type="RichTextLabel" parent="UI/TextboxPanel"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 3.0
margin_top = 1.0
margin_right = -3.0
margin_bottom = -1.0
custom_styles/normal = SubResource( 1 )
custom_constants/line_separation = 3
scroll_active = false

[node name="BattleActionButtons" type="GridContainer" parent="UI"]
editor/display_folded = true
margin_left = 9.0
margin_top = 73.0
margin_right = 81.0
margin_bottom = 137.0
custom_constants/vseparation = 3
custom_constants/hseparation = 8
columns = 2

[node name="SwordActionButton" parent="UI/BattleActionButtons" instance=ExtResource( 13 )]
margin_bottom = 13.0
mouse_filter = 0

[node name="HealActionButton" parent="UI/BattleActionButtons" instance=ExtResource( 14 )]
margin_left = 40.0
margin_right = 72.0
margin_bottom = 13.0
mouse_filter = 0

[node name="Fade" type="ColorRect" parent="."]
modulate = Color( 1, 1, 1, 0 )
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_lock_": true
}

[node name="HealRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
color = Color( 0.290196, 0.647059, 0.188235, 0 )
__meta__ = {
"_edit_lock_": true
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/FadeToNewRoom = SubResource( 2 )
anims/HealGlow = SubResource( 3 )
[connection signal="ap_changed" from="PlayerStats" to="UI/StatsPanel" method="_on_PlayerStats_ap_changed"]
[connection signal="hp_changed" from="PlayerStats" to="UI/StatsPanel" method="_on_PlayerStats_hp_changed"]
[connection signal="mp_changed" from="PlayerStats" to="UI/StatsPanel" method="_on_PlayerStats_mp_changed"]
[connection signal="pressed" from="UI/CenterContainer/NextRoomButton" to="." method="_on_NextRoomButton_pressed"]
[connection signal="healAnimation" from="UI/BattleActionButtons/HealActionButton" to="." method="_on_HealActionButton_healAnimation"]
